; ModuleID = '/home/carl/AnghaBench/seafile/common/extr_rpc-service.c_seafile_get_repo_property.c'
source_filename = "/home/carl/AnghaBench/seafile/common/extr_rpc-service.c_seafile_get_repo_property.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_4__ = type { i32 }

@SEAFILE_DOMAIN = common dso_local global i32 0, align 4
@SEAF_ERR_BAD_ARGS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"Arguments should not be empty\00", align 1
@seaf = common dso_local global %struct.TYPE_5__* null, align 8
@SEAF_ERR_BAD_REPO = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [19 x i8] c"Can't find Repo %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @seafile_get_repo_property(i8* %0, i8* %1, i32** %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.TYPE_4__*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32** %2, i32*** %7, align 8
  store i8* null, i8** %8, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %12, label %15

12:                                               ; preds = %3
  %13 = load i8*, i8** %6, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %20, label %15

15:                                               ; preds = %12, %3
  %16 = load i32**, i32*** %7, align 8
  %17 = load i32, i32* @SEAFILE_DOMAIN, align 4
  %18 = load i32, i32* @SEAF_ERR_BAD_ARGS, align 4
  %19 = call i32 (i32**, i32, i32, i8*, ...) @g_set_error(i32** %16, i32 %17, i32 %18, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  store i8* null, i8** %4, align 8
  br label %44

20:                                               ; preds = %12
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** @seaf, align 8
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i8*, i8** %5, align 8
  %25 = call %struct.TYPE_4__* @seaf_repo_manager_get_repo(i32 %23, i8* %24)
  store %struct.TYPE_4__* %25, %struct.TYPE_4__** %9, align 8
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %27 = icmp ne %struct.TYPE_4__* %26, null
  br i1 %27, label %34, label %28

28:                                               ; preds = %20
  %29 = load i32**, i32*** %7, align 8
  %30 = load i32, i32* @SEAFILE_DOMAIN, align 4
  %31 = load i32, i32* @SEAF_ERR_BAD_REPO, align 4
  %32 = load i8*, i8** %5, align 8
  %33 = call i32 (i32**, i32, i32, i8*, ...) @g_set_error(i32** %29, i32 %30, i32 %31, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i8* %32)
  store i8* null, i8** %4, align 8
  br label %44

34:                                               ; preds = %20
  %35 = load %struct.TYPE_5__*, %struct.TYPE_5__** @seaf, align 8
  %36 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %39 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = load i8*, i8** %6, align 8
  %42 = call i8* @seaf_repo_manager_get_repo_property(i32 %37, i32 %40, i8* %41)
  store i8* %42, i8** %8, align 8
  %43 = load i8*, i8** %8, align 8
  store i8* %43, i8** %4, align 8
  br label %44

44:                                               ; preds = %34, %28, %15
  %45 = load i8*, i8** %4, align 8
  ret i8* %45
}

declare dso_local i32 @g_set_error(i32**, i32, i32, i8*, ...) #1

declare dso_local %struct.TYPE_4__* @seaf_repo_manager_get_repo(i32, i8*) #1

declare dso_local i8* @seaf_repo_manager_get_repo_property(i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
